# mlops2025

lesson2/seminar/step5_homework_model_validation_and_metrics/: .pre-commit-config.yaml  pyproject.toml
lesson2/seminar/step5_homework_model_validation_and_metrics/.dvc/tmp/: lock
lesson2/seminar/step5_homework_model_validation_and_metrics/reports/validation/: index.html
lesson2/seminar/step5_homework_model_validation_and_metrics/src/: evaluate.py  validate_model.py
lesson4/seminar/step4_monitoring/src/: monitor.py
lesson6/seminar/step3_rag/: homework.py  pyproject.toml
